git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15527 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 826f0aa67fec43eed266bee8150260343a291a14

--- a/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
@@ -121,14 +121,14 @@
 		<!-- <get src="http://repo1.maven.org/maven2/org/apache/aries/blueprint/org.apache.aries.blueprint/0.1-incubating/org.apache.aries.blueprint-0.1-incubating.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.apache.aries.blueprint-0.1-incubating.jar"
 						usetimestamp="true"/> -->
-		<get src="http://www.kermeta.org/maven2-snapshots/org/kermeta/utils/utils.slf4j.eclipse/2.0.0-SNAPSHOT/utils.slf4j.eclipse-2.0.0-SNAPSHOT.jar" 
-						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utils.slf4j.eclipse-2.0.0-SNAPSHOT.jar"
+		<get src="http://maven.irisa.fr/artifactory/org/kermeta/utils/utils.slf4j.eclipse/2.0.1-SNAPSHOT/utils.slf4j.eclipse-2.0.1-SNAPSHOT.jar" 
+						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utils.slf4j.eclipse-2.0.1-SNAPSHOT.jar"
 						usetimestamp="true"/>
-		<get src="http://www.kermeta.org/maven2-snapshots/org/kermeta/utils/utils.provisionner4eclipse/2.0.0-SNAPSHOT/utils.provisionner4eclipse-2.0.0-SNAPSHOT.jar" 
-						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utils.provisionner4eclipse-2.0.0-SNAPSHOT.jar"
+		<get src="http://maven.irisa.fr/artifactory/repo/org/kermeta/utils/utils.provisionner4eclipse/2.0.1-SNAPSHOT/utils.provisionner4eclipse-2.0.1-SNAPSHOT.jar" 
+						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utils.provisionner4eclipse-2.0.1-SNAPSHOT.jar"
 						usetimestamp="true"/>
-		<get src="http://www.kermeta.org/maven2-snapshots/org/kermeta/utilities/eclipse/utilities.eclipse.jface/2.0.0-SNAPSHOT/utilities.eclipse.jface-2.0.0-SNAPSHOT.jar" 
-						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utilities.eclipse.jface-2.0.0-SNAPSHOT.jar"
+		<get src="http://maven.irisa.fr/artifactory/repo/org/kermeta/utils/utils.helpers.eclipse.jface/2.0.1-SNAPSHOT/utils.helpers.eclipse.jface-2.0.1-SNAPSHOT.jar" 
+						dest="${env.WORKSPACE}/build/dropins/org.kermeta.utils.helpers.eclipse.jface-2.0.1-SNAPSHOT.jar"
 						usetimestamp="true"/>
 		<get src="http://repo1.maven.org/maven2/org/ops4j/pax/url/pax-url-mvn/1.3.4/pax-url-mvn-1.3.4.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.ops4j.pax-url-mvn-1.3.4.jar"
