--- a/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
@@ -176,11 +176,11 @@
   		</antcall>
 		
 		<!-- FIND BUGS -->
-		<antcall target="provision_feature">
+		<!-- <antcall target="provision_feature">
     		<param name="feature.name" value="edu.umd.cs.findbugs.plugin.eclipse.feature.group"/>
 			<param name="feature.repository" value="http://findbugs.cs.umd.edu/eclipse"/>
 			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.code.name}_${eclipse.version.name}_base"/>
-  		</antcall>
+  		</antcall>-->
 
 		<!-- FROM EMFTEXT -->
 		<antcall target="provision_feature">
@@ -189,11 +189,11 @@
 					<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.code.name}_${eclipse.version.name}_base"/>
 		</antcall>
 		<!-- FROM m2eclipse.sonatype.org -->
-		<antcall target="provision_feature">
+		<!--<antcall target="provision_feature">
 		    		<param name="feature.name" value="org.maven.ide.eclipse.feature.feature.group"/>
 					<param name="feature.repository" value="http://m2eclipse.sonatype.org/sites/m2e"/>
 					<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.code.name}_${eclipse.version.name}_base"/>
-		</antcall>
+		</antcall>-->
 		<!-- FROM OTHER UPDATE SITE -->
 
 		<echo>Additional install in the dropin folder - should be replaced later by proper installation </echo>			
