quick and dirty fix : embedding lpg.runtime directly in the parser in order to workaround the change in eclipse 3.6.2
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15533 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 632ecddf96177798b8fc31baf011c88863cc84ea

--- a/ocl_projects/org.kermeta.eclipse.ocl.parser/build.properties
+++ b/ocl_projects/org.kermeta.eclipse.ocl.parser/build.properties
@@ -10,4 +10,5 @@ bin.includes = META-INF/,\
                about.properties,\
                plugin.xml,\
                plugin.properties,\
-               schema/
+               schema/,\
+               lib/net.sourceforge.lpg.lpgjavaruntime_1.1.0.v200803061910.jar
