--- a/hudson_jobs/full_kermeta_studio_updatesite/build.xml
+++ b/hudson_jobs/full_kermeta_studio_updatesite/build.xml
@@ -17,7 +17,7 @@
 	<property name="eclipse.bin.home" location="${studio.base.dir}/eclipse"/>
 	<property name="equinox.jar.filename" value="org.eclipse.equinox.launcher_1.1.1.R36x_v20101122_1400.jar"/>
 	<property name="deploy.server" value="web1.irisa.fr"/>
-	<property name="deploy.user" value="web-triskell"/>
+	<property name="deploy.user" value="web-kermeta"/>
 	<property name="deploy.path" value="/home/web/apache/sites/kermeta.org/htdocs/integration_build/update"/>
 	
 	
