--- a/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
@@ -117,6 +117,7 @@
 	
 	
 	<target name="get_dropins">
+		<delete dir="${env.WORKSPACE}/build/dropins/" failonerror="no"/>
 		<mkdir dir="${env.WORKSPACE}/build/dropins/"/>
 		<!-- <get src="http://repo1.maven.org/maven2/org/apache/aries/blueprint/org.apache.aries.blueprint/0.1-incubating/org.apache.aries.blueprint-0.1-incubating.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.apache.aries.blueprint-0.1-incubating.jar"
