added kermeta nature plugin in dropin
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@15671 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: 9ca238dab5d61eeedd0ec45ecd2c876c86d0deac

--- a/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
@@ -137,6 +137,9 @@
 		<get src="http://repo1.maven.org/maven2/org/ops4j/pax/url/pax-url-assembly/1.3.4/pax-url-assembly-1.3.4.jar" 
 						dest="${env.WORKSPACE}/build/dropins/org.ops4j.pax-url-assembly-1.3.4.jar"
 						usetimestamp="true"/>
+		<get src="http://maven.irisa.fr/artifactory/repo/org/kermeta/language/language.texteditor.eclipse.nature/2.0.1-SNAPSHOT/language.texteditor.eclipse.nature-2.0.1-SNAPSHOT.jar" 
+								dest="${env.WORKSPACE}/build/dropins/org.kermeta.language.texteditor.eclipse.nature-2.0.1-SNAPSHOT.jar"
+								usetimestamp="true"/>
 	</target>
 	
 	<target name="provision_eclipse_version" depends="get_native_eclipse, get_dropins">
