--- a/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
+++ b/hudson_jobs/provision_eclipse_indigo_bases_for_kermeta/build.xml
@@ -172,7 +172,7 @@
 		     org.eclipse.jdt seems not installed in some version (win32) and is required by findbug -->
 		<antcall target="provision_feature">
     		<!-- <param name="feature.name" value="org.eclipse.sdk.feature.group, org.eclipse.emf.sdk.feature.group, org.eclipse.emf.ecoretools.sdk.feature.group, org.eclipse.emf.compare.sdk.feature.group, org.eclipse.wst.xml_ui.feature.feature.group, org.eclipse.emf.compare.sdk.feature.group, org.eclipse.gmf.runtime.sdk.feature.group, org.eclipse.gmf.feature.group, org.eclipse.jet.sdk.feature.group, org.eclipse.ocl.all.sdk.feature.group, org.eclipse.uml2.sdk.feature.group, org.eclipse.xsd.sdk.feature.group, org.eclipse.team.svn.feature.group, org.eclipse.team.svn.resource.ignore.rules.jdt.feature.group, org.eclipse.team.svn.revision.graph.feature.group, org.eclipse.xpand.sdk.feature.group, org.eclipse.jdt.feature.group, org.eclipse.zest.feature.group"/> -->
-			<param name="feature.name" value="org.eclipse.wst.xml_ui.feature.feature.group org.eclipse.team.svn.feature.group, org.eclipse.team.svn.resource.ignore.rules.jdt.feature.group, org.eclipse.team.svn.revision.graph.feature.group"/>
+			<param name="feature.name" value="org.eclipse.wst.xml_ui.feature.feature.group, org.eclipse.team.svn.feature.group, org.eclipse.team.svn.resource.ignore.rules.jdt.feature.group, org.eclipse.team.svn.revision.graph.feature.group"/>
 			<param name="feature.repository" value="${eclipse.official.repository}"/>
 			<param name="target.eclipse.dir" value="${env.WORKSPACE}/build/kermeta_${eclipse.code.name}_${eclipse.version.name}_base"/>
   		</antcall>
