Last version of Kompose v1 for ECore
git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@16630 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95

Former-commit-id: f133b7a75219f9392e3888e9f00085a1c634ceef

--- a/kompose_projects/kompose_spe_ecore_v1/build.properties
+++ b/kompose_projects/kompose_spe_ecore_v1/build.properties
@@ -1,4 +1,20 @@
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .
+               .,\
+               plugin.xml,\
+               kermeta/,\
+               bin/,\
+               .classpath,\
+               .project,\
+               build.properties,\
+               models/
+src.includes = .classpath,\
+               .project,\
+               META-INF/,\
+               bin/,\
+               build.properties,\
+               kermeta/,\
+               models/,\
+               plugin.xml,\
+               src/
