--- a/ki_projects/org.kermeta.kompren.slicing/.settings/org.eclipse.core.resources.prefs
+++ b/ki_projects/org.kermeta.kompren.slicing/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
-#Thu Feb 02 19:09:52 CET 2012
+#Tue Feb 07 15:00:36 CET 2012
 eclipse.preferences.version=1
 encoding//examples/debuggerSM/stateMachine.ecore=UTF-8
 encoding//examples/debuggerSM/stateMachine.ecorediag=UTF-8
 encoding//examples/featureModel/FML.ecorediag=UTF-8
+encoding//examples/featureModel/featureDiagram.ecorediag=UTF-8
 encoding//examples/stateMachine/StateMachine.ecorediag=UTF-8
