git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17069 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 97fe482a396ab74150e9ff7953f2a18d55411ff6

--- a/ki_projects/org.kermeta.kompren.slicing/plugin.properties
+++ b/ki_projects/org.kermeta.kompren.slicing/plugin.properties
@@ -4,5 +4,5 @@
 #
 # $Id$
 
-pluginName = Slicing Model
-providerName = www.example.org
+pluginName = Kompren Model Slicer Model Model
+providerName = fr.irisa.triskell
