git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17074 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 89963020c0f91a13050326ea97c3504378441aa2

--- a/ki_projects/org.kermeta.kompren.slicing.editor/plugin.xml
+++ b/ki_projects/org.kermeta.kompren.slicing.editor/plugin.xml
@@ -30,7 +30,7 @@
             id="org.kermeta.kompren.slicing.presentation.SlicingEditorID"
             name="%_UI_SlicingEditor_label"
             icon="icons/full/obj16/SlicingModelFile.gif"
-            extensions="slicing"
+            extensions="slicer"
             class="org.kermeta.kompren.slicing.presentation.SlicingEditor"
             contributorClass="org.kermeta.kompren.slicing.presentation.SlicingActionBarContributor">
       </editor>
