--- a/kompren_projects/org.kermeta.kompren.root/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.root/pom.xml
@@ -2,19 +2,19 @@
 <!-- License : EPL -->
 <!-- Project : org.kermeta.root -->
 <!-- Copyright : IRISA / INRIA / Universite de Rennes 1 -->
-<!-- Authors : Cédric Bouhours <cedric.bouhours@inria.fr> -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.kermeta</groupId>
-	<artifactId>kermeta.root</artifactId>
+	<groupId>org.kermeta.kompren</groupId>
+	<artifactId>kompren.root</artifactId>
 	<packaging>pom</packaging>
 	<version>2.0-SNAPSHOT</version>
-	<name>kermeta.root :: Root for the projects dedicated to kermeta 2</name>
+	<name>kompren.root :: Root for the projects dedicated to Kompren</name>
 
 	<properties>
 		<kermeta.version>2.0.1-SNAPSHOT</kermeta.version>
+		<kompren.version>2.0.0-SNAPSHOT</kompren.version>
 		<utils.version>2.0.1-SNAPSHOT</utils.version>
 		<traceability.version>2.0.2-SNAPSHOT</traceability.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,18 +30,8 @@
     	<eclipse.repository.version>indigo</eclipse.repository.version>
 	</properties>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.8.1</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
-
 	<build>
 		<plugins>
-
 			<!-- calculate versions for some special cases -->
 			<plugin>
 				<groupId>org.codehaus.groovy.maven</groupId>
@@ -143,14 +133,6 @@
 					</jvmArgs>
 				</configuration>
 			</plugin>
-
-			<!-- enable tycho build extension -->
-			<plugin>
-				<groupId>org.sonatype.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<extensions>true</extensions>
-			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -251,24 +233,4 @@
 			<uniqueVersion>false</uniqueVersion>
 		</snapshotRepository>
 	</distributionManagement>
-	<profiles>
-		<profile>
-			<id>sonar</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			<properties>
-				<!-- EXAMPLE FOR MYSQL -->
-				<sonar.jdbc.url>
-					jdbc:derby://localhost:1507/sonar;create=true
-				</sonar.jdbc.url>
-				<sonar.jdbc.driver>org.apache.derby.jdbc.ClientDriver</sonar.jdbc.driver>
-				<sonar.jdbc.username>sonar</sonar.jdbc.username>
-				<sonar.jdbc.password>sonar</sonar.jdbc.password>
-
-				<!-- SERVER ON A REMOTE HOST -->
-				<sonar.host.url>http://tipimouss.irisa.fr:9000</sonar.host.url>
-			</properties>
-		</profile>
-	</profiles>
 </project>
