--- a/kompren_projects/org.kermeta.kompren.slicer.compiler/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.compiler/pom.xml
@@ -1,21 +1,22 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <parent>
-        <artifactId>language.root</artifactId>
-        <groupId>org.kermeta.language</groupId>
-        <version>2.0.1-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>language.prettyprinter</artifactId>
+    <artifactId>kompren.slicer.compiler</artifactId>
     <packaging>jar</packaging>
-    <name>language.prettyprinter :: a little prettyprinter for k2</name>
+    <name>kompren.slicer.compiler :: Kompren compiler</name>
+    
+    <parent>
+        <groupId>org.kermeta.kompren</groupId>
+        <artifactId>kompren.root</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+    </parent>
 
     <dependencies>   
-    	 <dependency>
+  <!--  	 <dependency>
             <groupId>${project.parent.groupId}</groupId>
             <artifactId>language.model</artifactId>
             <version>${kermeta.version}</version>
-        </dependency>
+        </dependency> -->
         
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -23,7 +24,7 @@
             <version>${scala.version}</version>
         </dependency>   
     	 <dependency>
-            <groupId>${project.parent.groupId}</groupId>
+            <groupId>org.kermeta.language</groupId>
             <artifactId>language.library.core</artifactId>
             <version>${kermeta.version}</version>
         </dependency>
@@ -48,12 +49,12 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <kp>org.kermeta.language.prettyprinter.kp</kp>
+                            <kp>slicerCompiler.kp</kp>
                             <resourceOutputDirectory>${project.build.directory}/resources</resourceOutputDirectory>
                             <targetGroupId>${project.groupId}</targetGroupId>
                             <targetArtifactId>${project.artifactId}</targetArtifactId>
                             <generateKmOnly>false</generateKmOnly>
-                            <checkingEnabled>false</checkingEnabled>
+                            <checkingEnabled>true</checkingEnabled>
                             <intermediateFilesRequired>false</intermediateFilesRequired>
                         </configuration>
                     </execution>
