git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17410 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 2ae23bfe763713b9e7d6498fb07d204452296754

--- a/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.xml
@@ -28,7 +28,7 @@
             id="org2.kermeta.kompren.slicing.presentation.SlicingEditorID"
             name="%_UI_SlicingEditor_label"
             icon="icons/full/obj16/SlicingModelFile.gif"
-            extensions="slicing"
+            extensions="kompren"
             class="org2.kermeta.kompren.slicing.presentation.SlicingEditor"
             contributorClass="org2.kermeta.kompren.slicing.presentation.SlicingActionBarContributor">
       </editor>
