git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17415 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: fa8daa8bd3a168a86c8b7af4887e6820adaf168b

--- a/kompren_projects/org.kermeta.kompren.slicer.edit/plugin.properties
+++ b/kompren_projects/org.kermeta.kompren.slicer.edit/plugin.properties
@@ -1,8 +1,8 @@
 # INRIA/IRISA
 # Triskell Team
 
-pluginName = kompren Edit Support
-providerName = www.example.org
+pluginName = Kompren Slicer Edit Support
+providerName = Triskell Team - INRIA/IRISA
 
 _UI_CreateChild_text = {0}
 _UI_CreateChild_text2 = {1} {0}
@@ -20,13 +20,13 @@ _UI_SlicedClass_type = Sliced Class
 _UI_SlicedProperty_type = Sliced Property
 _UI_OppositeCreation_type = Opposite Creation
 _UI_SlicedElement_type = Sliced Element
-_UI_VarDecl_type = Var Decl
+_UI_VarDecl_type = Variable Declaration
 _UI_Unknown_type = Object
 
 _UI_Unknown_datatype= Value
 
 _UI_Slicer_name_feature = Name
-_UI_Slicer_uriMetamodel_feature = Uri Metamodel
+_UI_Slicer_uriMetamodel_feature = Metamodel URI
 _UI_Slicer_active_feature = Active
 _UI_Slicer_strict_feature = Strict
 _UI_Slicer_helper_feature = Helper
