--- a/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.properties
+++ b/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.properties
@@ -1,10 +1,10 @@
 # INRIA/IRISA
 # Triskell Team
 
-pluginName = kompren Editor
-providerName = www.example.org
+pluginName = Kompren Slicer Editor
+providerName = Triskell Team - INRIA/IRISA
 
-_UI_SlicingEditor_menu = &Slicing Editor
+_UI_SlicerEditor_menu = &Kompren Slicer Editor
 
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
@@ -27,17 +27,17 @@ _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
 
-_UI_Wizard_category = Example EMF Model Creation Wizards
+_UI_Wizard_category = Kompren
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
-_UI_SlicingModelWizard_label = Slicing Model
-_UI_SlicingModelWizard_description = Create a new Slicing model
+_UI_SlicerModelWizard_label = Kompren Slicer Model
+_UI_SlicerModelWizard_description = Create a new Kompren Slicer model
 
-_UI_SlicingEditor_label = Slicing Model Editor
+_UI_SlicerEditor_label = Kompren Slicer Model Editor
 
-_UI_SlicingEditorFilenameDefaultBase = My
-_UI_SlicingEditorFilenameExtensions = slicing
+_UI_SlicerEditorFilenameDefaultBase = mySlicer
+_UI_SlicerEditorFilenameExtensions = kompren
 
 _UI_Wizard_label = New
 
