--- a/kompren_projects/org.kermeta.kompren.slicer.model/plugin.properties
+++ b/kompren_projects/org.kermeta.kompren.slicer.model/plugin.properties
@@ -1,5 +1,5 @@
 # INRIA/IRISA
 # Triskell Team
 
-pluginName = KomprenSlicer Model
-providerName = www.example.org
+pluginName = Kompren Slicer Model
+providerName = Triskell Team - INRIA/IRISA
