git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17416 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 7d69cc7580fcf298ca6839d99264b1d08d26af76

--- a/kompren_projects/org.kermeta.kompren.slicer.edit/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.edit/pom.xml
@@ -46,7 +46,7 @@
                         <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
                         <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
                         <Export-Package>
-                        	org2.kermeta.kompren.slicing.provider.*
+                        	org2.kermeta.kompren.slicer.provider.*
                         </Export-Package>
                         <Import-Package>
                         	org.eclipse.emf.*,
