--- a/kompren_projects/org.kermeta.kompren.slicer.model/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.model/pom.xml
@@ -42,7 +42,7 @@
                         <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
                         <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
                         <Export-Package>
-                        	org2.kermeta.kompren.slicing.*
+                        	org2.kermeta.kompren.slicer.*
                         </Export-Package>
                         <Import-Package>
                         	org.eclipse.emf.*,
