--- a/kompren_projects/org.kermeta.kompren.slicer.parser/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.parser/pom.xml
@@ -2,66 +2,23 @@
 <!-- License    : EPL                                    -->
 <!-- Project    : org.kermeta.language.loader.kmt.scala -->
 <!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 --> 
-<!-- Authors : Haja Rambelontsalama <hrambelo@irisa.fr> --> 
 
 <project
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
     <packaging>jar</packaging>
-    <name>language.loader.kmt.scala :: Lexer and KMT files loader</name>
-    <artifactId>language.loader.kmt.scala</artifactId>
+    <artifactId>kompren.slicer.parser</artifactId>
+    <name>kompren.slicer.parser :: Kompren parser</name>
 
     <parent>
-        <artifactId>language.root</artifactId>
-        <groupId>org.kermeta.language</groupId>
-        <version>2.0.1-SNAPSHOT</version>
+        <groupId>org.kermeta.kompren</groupId>
+        <artifactId>kompren.root</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
 
-    <dependencies>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>language.model</artifactId>
-            <version>${kermeta.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.parent.groupId}</groupId>
-            <artifactId>language.loader.kmt.scala.api</artifactId>
-            <version>${kermeta.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kermeta.emf</groupId>
-            <artifactId>emf.lib</artifactId>
-            <version>${emf.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.scala-lang</groupId>
-            <artifactId>scala-library</artifactId>
-            <version>${scala.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.kermeta.utils</groupId>
-            <artifactId>utils.systemservices.api</artifactId>
-            <version>${kermeta.version}</version>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.kermeta.utils</groupId>
-            <artifactId>utils.helpers</artifactId>
-            <version>${kermeta.version}</version>
-        </dependency>
-        
-        <dependency>
-			<groupId>org.kermeta.language</groupId>
-			<artifactId>language.helper.tests</artifactId>
-			<version>${kermeta.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-    </dependencies>
-
     <build>
-        <sourceDirectory>src/main/java</sourceDirectory>
+        <sourceDirectory>src</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -77,13 +34,14 @@
                             <Manifest-Version>1.0</Manifest-Version>
                             <Bundle-ManifestVersion>2</Bundle-ManifestVersion>
                             <Export-Package>
-							org.kermeta.language.loader.kmt.scala
+                            org.kermeta.kompren,
+                            org.kermeta.kompren.lexer,
+                            org.kermeta.kompren.parser,
+                            org.kermeta.kompren.parser.sub,
+                            org.kermeta.kompren.resolver
                             </Export-Package>
                             <Require-Bundle>
-                            org.kermeta.scala.scala-library,
-            				org.kermeta.language.model,
-            				org.kermeta.language.loader.kmt.scala.api,
-            				org.kermeta.utils.systemservices.api
+                            org.kermeta.scala.scala-library
                             </Require-Bundle>
                             <Import-Package>
 							org.eclipse.emf.common.notify,
@@ -100,18 +58,6 @@
                     </archive>
                 </configuration>
             </plugin>
-            <!-- test configuration -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.9</version>
-				<configuration>
-					<testFailureIgnore>true</testFailureIgnore>
-					<includes>
-						<include>**/*TestSuite.java</include>
-					</includes>
-				</configuration>
-			</plugin>
             <plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-eclipse-plugin</artifactId>
@@ -162,22 +108,23 @@
 		      </plugin>
         </plugins>
     </build>
-
-
-    <repositories>
-        <repository>
-            <id>kermetaRepo</id>
-            <url>http://maven.irisa.fr/artifactory/public-release</url>
-        </repository>
-        <repository>
-            <id>kermetaRepoSnap</id>
-            <url>http://maven.irisa.fr/artifactory/public-snapshot</url>
-            <snapshots>
-            
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
     
-    </repositories>
-
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.kermeta.kompren</groupId>
+            <artifactId>kompren.slicer.model</artifactId>
+            <version>${kompren.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kermeta.emf</groupId>
+            <artifactId>emf.lib</artifactId>
+            <version>${emf.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.scala-lang</groupId>
+            <artifactId>scala-library</artifactId>
+            <version>${scala.version}</version>
+        </dependency>
+    </dependencies>
 </project>
