git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17422 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: c12830eb439c4f590767a474d2a0bb2a7d380303

--- a/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.xml
@@ -10,23 +10,19 @@
 
    <extension point="org.eclipse.ui.newWizards">
       <category
-            id="org.eclipse.emf.ecore.Wizard.category.ID"
-            name="%_UI_Wizard_category"/>
-      <wizard
-            id="org2.kermeta.kompren.slicer.presentation.SlicerModelWizardID"
-            name="%_UI_SlicerModelWizard_label"
-            class="org2.kermeta.kompren.slicer.presentation.SlicerModelWizard"
-            category="org.eclipse.emf.ecore.Wizard.category.ID"
-            icon="icons/full/obj16/SlicerModelFile.gif">
-         <description>%_UI_SlicerModelWizard_description</description>
-         <selection class="org.eclipse.core.resources.IResource"/>
-      </wizard>
+            id="org.kermeta.kompren.wizard"
+            name="Kompren"/>
+	 <wizard category="org.kermeta.kompren.wizard" icon="icons/full/obj16/SlicerModelFile.gif" 
+	 	class="org2.kermeta.kompren.slicer.presentation.SlicerModelWizard" 
+	 	id="org.kermeta.kompren.KomprenModelWizard" name="Kompren Slicer Model">
+	 	<description>Create a new Kompren Slicer model</description>
+	 </wizard>
    </extension>
 
    <extension point="org.eclipse.ui.editors">
       <editor
             id="org2.kermeta.kompren.slicer.presentation.SlicerEditorID"
-            name="%_UI_SlicerEditor_label"
+            name="Kompren Slicer Model Editor"
             icon="icons/full/obj16/SlicerModelFile.gif"
             extensions="kompren"
             class="org2.kermeta.kompren.slicer.presentation.SlicerEditor"
