--- a/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.properties
+++ b/kompren_projects/org.kermeta.kompren.slicer.editor/plugin.properties
@@ -9,6 +9,7 @@ _UI_SlicerEditor_menu = &Kompren Slicer Editor
 _UI_CreateChild_menu_item = &New Child
 _UI_CreateSibling_menu_item = N&ew Sibling
 
+_UI_Generate_MSF_menu_item = Generate the Model Slicer Function
 _UI_ShowPropertiesView_menu_item = Show &Properties View
 _UI_RefreshViewer_menu_item = &Refresh
 
@@ -26,8 +27,6 @@ _UI_SingleObjectSelected = Selected Object: {0}
 _UI_MultiObjectSelected = Selected {0} Objects
 
 _UI_OpenEditorError_label = Open Editor
-
-_UI_Wizard_category = Kompren
 
 _UI_CreateModelError_message = Problems encountered in file "{0}"
 
