git-svn-id: https://scm.gforge.inria.fr/anonscm/svn/kermeta/trunk@17423 3b3ea266-f0f1-470e-95cb-5b2c9abc2e95
Former-commit-id: 57011ebf64311fec8afb127f2918236ba8c19051

--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/plugin.xml
@@ -6,7 +6,7 @@
          point="org.eclipse.ui.editors">
       <editor
             name="Kompren Editor"
-            extensions="slicertxt"
+            extensions="komprent"
             icon="icons/sample.gif"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             class="org.kermeta.kompren.texteditor.editors.KomprenEditor"
