--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/pom.xml
@@ -1,25 +1,294 @@
 <!-- $Id: $ -->
-<!-- License : EPL -->
-<!-- Project : org.kermeta.kp.editor -->
-<!-- Copyright : IRISA / INRIA / Universite de Rennes 1 -->
-<!-- Authors : Haja Rambelontsalama <hrambelo@irisa.fr> -->
+<!-- License    : EPL                                    -->
+<!-- Copyright  : IRISA / INRIA / Universite de Rennes 1 --> 
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.kermeta.kp</groupId>
-	<artifactId>kp.editor.multimodule</artifactId>
-	<name>kp.editor.multimodule :: KP Editor and parser for kermeta 2</name>
-	<packaging>pom</packaging>
-	
-  <parent>
-    <groupId>org.kermeta.language</groupId>
-    <artifactId>language.root</artifactId>
-    <version>2.0.1-SNAPSHOT</version>
-  </parent>
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+	<artifactId>kompren.slicer.texteditor</artifactId>
+    <packaging>bundle</packaging>
+    <name>kompren.slicer.texteditor :: Kompren text editor</name>
 
-	<modules>
-		<module>version_parser.standalone</module>
-		<module>version_editor</module>
-	</modules>
+    <parent>
+        <groupId>org.kermeta.kompren</groupId>
+        <artifactId>kompren.root</artifactId>
+        <version>2.0.0-SNAPSHOT</version>
+    </parent>
+
+  <build>
+    <sourceDirectory>src</sourceDirectory>
+    
+		<resources>
+			<resource>
+				<directory>.</directory>
+				<includes>
+					<include>plugin.properties</include>
+					<include>plugin.xml</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>icons</directory>
+				<targetPath>icons</targetPath>
+			</resource>
+		</resources>
+		
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.0.2</version>
+        <configuration>
+          <argLine>-Xmx1024m</argLine>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+      <!-- Add generated source to build cycle -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.7</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>../src/main/java-gen</source>
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.5</version>
+        <extensions>true</extensions>
+        <configuration>
+          <instructions>
+            <Bundle-SymbolicName>org.kermeta.${project.artifactId};singleton:=true</Bundle-SymbolicName>
+            <Bundle-Name>${project.name}</Bundle-Name>
+            <Bundle-Vendor>${bundle.vendor}</Bundle-Vendor>
+            <Bundle-ClassPath>.</Bundle-ClassPath>
+             <!-- Dependency used for compiling all the bundle (with dependecy to org.eclipse.core.* -->
+             
+            <Require-Bundle>
+				org.eclipse.core.resources,
+				org.emftext.access;resolution:=optional,
+				org.eclipse.core.expressions,
+				org.eclipse.debug.core,
+				org.eclipse.debug.ui,
+				org.eclipse.emf,
+				org.eclipse.emf.codegen.ecore,
+				org.eclipse.emf.ecore,
+				org.eclipse.emf.ecore.edit,
+				org.eclipse.emf.edit.ui,
+				org.eclipse.emf.workspace,
+				org.eclipse.jface,
+				org.eclipse.jface.text,
+				org.eclipse.ui,
+				org.eclipse.ui.editors,
+				org.eclipse.ui.ide,
+				org.eclipse.ui.views,
+				org.kermeta.utils.systemservices.api,
+				org.kermeta.utils.systemservices.eclipse,
+				org.kermeta.kompren.slicer.parser,
+				org.kermeta.kompren.slicer.model
+            </Require-Bundle>
+            
+            <Export-Package>
+              org.kermeta.kompren.texteditor,
+              org.kermeta.kompren.texteditor.editors
+            </Export-Package>
+            <!--
+              specify the packages that should be imported to correctly build
+              the bundle (i.e <packaging>bundle<packaging> ".*" to also include
+              sub packages use the ! for avoiding to import some packages that
+              are already there with the Require-Bundle
+            -->
+            <Import-Package>
+              !org.eclipse.*,
+              !org.osgi.framework.*,
+              !org.kermeta.kompren.* 
+            </Import-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.kermeta.emf</groupId>
+      <artifactId>emf.lib</artifactId>
+      <version>${emf.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.kermeta.kompren</groupId>
+        <artifactId>kompren.slicer.parser</artifactId>
+        <version>${kompren.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.kermeta.kompren</groupId>
+        <artifactId>kompren.slicer.model</artifactId>
+        <version>${kompren.version}</version>
+    </dependency>
+		<dependency>
+			<groupId>org.kermeta.utils</groupId>
+			<artifactId>utils.systemservices.api</artifactId>
+			<version>${kermeta.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.utils</groupId>
+			<artifactId>utils.systemservices.eclipse</artifactId>
+			<version>${kermeta.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.ui</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.ui.workbench</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.ui.editors</artifactId>
+			<version>[3.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.ui.ide</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.jface</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.jface.text</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.text</artifactId>
+			<version>[3.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.swt</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.swt.gtk.linux.x86_64</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.ui.workbench.texteditor</artifactId>
+			<version>[3.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.ui.views</artifactId>
+			<version>[3.4.1.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.core.runtime</artifactId>
+			<version>[3.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.core.commands</artifactId>
+			<version>[3.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.core.expressions</artifactId>
+			<version>[3.4.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.core.resources</artifactId>
+			<version>[3.5.2.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.core.jobs</artifactId>
+			<version>[3.4.100.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.debug.ui</artifactId>
+			<version>[3.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.equinox.common</artifactId>
+			<version>[3.5.1.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.equinox.registry</artifactId>
+			<version>[3.4.100.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.emf</groupId>
+			<artifactId>emf.lib</artifactId>
+      <version>${emf.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.emf.common.ui</artifactId>
+			<version>[2.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.emf.edit</artifactId>
+			<version>[2.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.emf.edit.ui</artifactId>
+			<version>[2.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.emf.ecore.edit</artifactId>
+			<version>[2.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.emf.ecore</artifactId>
+			<version>[2.5.0.0,)</version>
+		</dependency>
+		<dependency>
+			<groupId>org.osgi</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>${osgi.version}</version>
+		</dependency>
+	    <dependency>
+	      <groupId>org.emftext.commons</groupId>
+	      <artifactId>commons.antlr3_3_0</artifactId>
+	      <version>1.0.0</version>
+	    </dependency>
+		<dependency>
+			<groupId>org.kermeta.eclipse</groupId>
+			<artifactId>org.eclipse.equinox.preferences</artifactId>
+			<version>[3.2.301.0,)</version>
+		</dependency>
+		<dependency>
+      <groupId>org.kermeta.eclipse</groupId>
+      <artifactId>org.eclipse.core.filebuffers</artifactId>
+      <version>[3.5.100.0,)</version>
+    </dependency>
+  </dependencies>
 </project>
