--- a/kompren_projects/org.kermeta.kompren.slicer.texteditor/plugin.xml
+++ b/kompren_projects/org.kermeta.kompren.slicer.texteditor/plugin.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
-
+   <extension point="org.eclipse.ui.newWizards">
+      <category
+            id="org.kermeta.kompren.slicer.texteditor"
+            name="Kompren"
+            parentCategory="org.kermeta.kompren.wizard">
+      </category>
+      <wizard
+            category="org.kermeta.kompren.wizard"
+            class="org.kermeta.kompren.slicer.texteditor.wizards.SampleNewWizard"
+            icon="icons/sample.gif"
+            id="org.kermeta.kompren.slicer.texteditor.wizards.SampleNewWizard"
+            name="Kompren Textual Model">
+      </wizard> 
+   </extension>
+   
    <extension
          point="org.eclipse.ui.editors">
       <editor
-            name="Kompren Editor"
+            name="Kompren Textual Editor"
             extensions="komprent"
             icon="icons/sample.gif"
             contributorClass="org.eclipse.ui.texteditor.BasicTextEditorActionContributor"
             class="org.kermeta.kompren.texteditor.editors.KomprenEditor"
-            id="org.kermeta.kompren.texteditor.editors.KomprenEditor">
+            id="org.kermeta.kompren.texteditor.editors.KomprenTextualEditor">
       </editor>
    </extension>
 
